--- a/c45/c45-2m.html
+++ b/c45/c45-2m.html
@@ -6,4 +6,4 @@
 
 <div><h2 class=="nolinebreak" align="center">Ontology of <p  style="display:inline;color:blue" title="Unseen Cause, Luck, Fate, Destiny">अदृष्ट</p> - View of <p  style="display:inline;color:blue" title="Follower of Shabara, the Philosopher">शाबर  </p> s</h2></div>
 
-<img src="अदृष्टम्-2.jpg">
+<img src="adrsta_shaabaramata.png">
