--- a/c45/c45-4m.html
+++ b/c45/c45-4m.html
@@ -6,4 +6,4 @@
 
 <div><h2 class=="nolinebreak" align="center">Ontology of <p  style="display:inline;color:blue" title="Unseen Cause, Luck, Fate, Destiny">अदृष्ट</p> - View of <p style="display:inline;color:blue" title="Kumarila, the Philosopher"> कुमारिल </p> </h2></div>
 
-<img src="अदृष्टम्-4.jpg">
+<img src="adrsta_kaumarilamata.png">
