--- a/c45/c45-5m.html
+++ b/c45/c45-5m.html
@@ -6,4 +6,4 @@
 
 <div><h2 class=="nolinebreak" align="center">Ontology of <p  style="display:inline;color:blue" title="Unseen Cause, Luck, Fate, Destiny">अदृष्ट</p> -  <p style="display:inline;color:blue" title="सांख्य Philosophy"> सांख्य </p> Viewpoint </h2></div>
 
-<img src="अदृष्टम्-5.jpg">
+<img src="adrsta_saamkhyamata.png">
