--- a/c45/c45-7m.html
+++ b/c45/c45-7m.html
@@ -6,4 +6,4 @@
 
 <div><h2 class=="nolinebreak" align="center">Ontology of <p  style="display:inline;color:blue" title="Unseen Cause, Luck, Fate, Destiny">अदृष्ट</p> - View of <p style="display:inline;color:blue" title="Follower of अर्हत् s, divine beings in Jainism"> आर्हत् </p> s</h2></div>
 
-<img src="अदृष्टम्-7.jpg">
+<img src="adrsta_aarhatamata.png">
