--- a/c45/c45-8m.html
+++ b/c45/c45-8m.html
@@ -6,4 +6,4 @@
 
 <div><h2 class=="nolinebreak" align="center">Ontology of <p  style="display:inline;color:blue" title="Unseen Cause, Luck, Fate, Destiny">अदृष्ट</p> - View of <p style="display:inline;color:blue" title="Sage Vyasa"> बादरायण </p> </h2></div>
 
-<img src="अदृष्टम्-8.jpg">
+<img src="adrsta_baadaraayanamata.png">
