--- a/c45/c45-9m.html
+++ b/c45/c45-9m.html
@@ -6,4 +6,4 @@
 
 <div><h2 class=="nolinebreak" align="center">Ontology of <p  style="display:inline;color:blue" title="Unseen Cause, Luck, Fate, Destiny">अदृष्ट</p> - View of <p style="display:inline;color:blue" title="Follower of वेद "> वैदिक </p> s and <p style="display:inline;color:blue" title="Non-follower of वेद "> अवैदिक </p> s </h2></div>
 
-<img src="अदृष्टम्-9.jpg">
+<img src="adrsta_vaidika-avaidikamata.png">
