--- a/c45/c45-11m.html
+++ b/c45/c45-11m.html
@@ -6,4 +6,4 @@
 
 <div><h2 class=="nolinebreak" align="center">Ontology of <p  style="display:inline;color:blue" title="Unseen Cause, Luck, Fate, Destiny">अदृष्ट</p> - According to <p style="display:inline;color:blue" title="Scriptures"> शास्त्र </p> s</h2></div>
 
-<img src="अदृष्टम्-11.jpg">
+<img src="adrsta_shaastramata.png">
