--- a/c45/c45-13m.html
+++ b/c45/c45-13m.html
@@ -6,4 +6,4 @@
 
 <div><h2 class=="nolinebreak" align="center">Ontology of <p  style="display:inline;color:blue" title="Unseen Cause, Luck, Fate, Destiny">अदृष्ट</p> - View of <p style="display:inline;color:blue" title="Theist">सेश्वर</p> s</h2></div>
 
-<img src="अदृष्टम्-13.jpg">
+<img src="adrsta_seshvaramata.png">
