--- a/c45/c45-12m.html
+++ b/c45/c45-12m.html
@@ -6,4 +6,4 @@
 
 <div><h2 class=="nolinebreak" align="center">Ontology of <p  style="display:inline;color:blue" title="Unseen Cause, Luck, Fate, Destiny">अदृष्ट</p> - Analysis of heretofore</h2></div>
 
-<img src="अदृष्टम्-12.jpg">
+<img src="adrsta_budhamata.png">
