--- a/c45/c45-10m.html
+++ b/c45/c45-10m.html
@@ -6,4 +6,4 @@
 
 <div><h2 class=="nolinebreak" align="center">Ontology of <p  style="display:inline;color:blue" title="Unseen Cause, Luck, Fate, Destiny">अदृष्ट</p> - Inferring about <p  style="display:inline;color:blue" title="Unseen Cause, Luck, Fate, Destiny">अदृष्ट</p></h2></div>
 
-<img src="अदृष्टम्-10.jpg">
+<img src="adrsta_yauktikamata.png">
