--- a/frames_top.html
+++ b/frames_top.html
@@ -3,8 +3,8 @@
 <div>
     <ul id="menu">
         <li><img src="manameya.jpg"></li>
-  	<li><a href="login/main_login.php" target="_top">Admin Control</a></li>
-	<li><a href="search/index.php" target="_top">Search</a></li>
+  	<li><a href="#login">Admin Control</a></li>
+	<li><a href="#search">Search</a></li>
 	<li><a href="#query">Query</a></li>
     </ul>
 </div>
